2005-03-15 Zoran Vasiljevic <zv@archiware.com>

	* pkgIndex.tcl.in: Applied patch for Bug #1163357.
	Also, fixed the case when directory path contains blanks.

2005-03-05 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSvCmd.c: fixed potential access
	to the unlocked (and thus eventually freed) container

	* lib/ttrace.tcl: the overloaded [info] command now
	does the right thing when applied to non-existing 
	procedures. We now transparently resolve them and
	then allow the [info] to operate on them.

	The ttrace::enable can now be called recursively.

	Also, fixed stript generation issues for namespaced
	variables containing wild escape sequences.

2005-01-03 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: fixed Tcl Bug #1095370.
	We were wrongly tearing down workers on idle timer
	expiry *below* the number of workers set by the
	"-minworkers" option.

	* lib/ttrace.tcl: added [ttrace::config] to control
	some runtime options. The only option it allows now
	is "-doepochs". This is a boolean flag turning the
        epoch generation off/on.
	Also, improved handling of XOTcl introspections in
	regard to namespaced objects/classes.

2005-01-03 Zoran Vasiljevic <zv@archiware.com>

	* lib/ttrace.tcl: added [ttrace::isenabled] and modified
	the [ttrace::addtrace] to dynamically activate the tracer
	if the tracing is already enabled. This way we can dynamically
	load tracer scripts.
	
2005-01-03 Zoran Vasiljevic <zv@archiware.com>

        **** RELEASE: 2.6.1 Tagged ****

	* aolserver.m4:
	* configure.in:
	* configure: rebuild and include conditional compilation
	for AOLserver which was wrongly ommited since the switch
	to the TEA3 build system.
	Also, we will now revert to <major>.<minor>.<patch>
	version numbers for all releases.

	* generic/threadCmd.c: added new option "-head" to the
	[thread::send] command so scripts can be placed on the
	head of the thread event queue instead of the tail only. 
