@@ -3,12 +3,14 @@
 #
 if {[package vsatisfies [package provide Tcl] 8.4]} {
     package ifneeded Thread @PACKAGE_VERSION@ [subst {
-        load \[file join $dir [list @PKG_LIB_FILE@]\] Thread
-        if {\[file readable \[file join [list $dir] .. lib ttrace.tcl\]\]} { 
-            source \[file join [list $dir] .. lib ttrace.tcl\]
-        } elseif {\[file readable \[file join [list $dir] ttrace.tcl\]\]} { 
-            source \[file join [list $dir] ttrace.tcl\]
-        }
+	load \[file join [list $dir] [list @PKG_LIB_FILE@]\] Thread
+	if {\[info exists ::env(TCL_THREAD_LIBRARY)\] &&
+	    \[file readable \$::env(TCL_THREAD_LIBRARY)/ttrace.tcl\]} {
+	    source \$::env(TCL_THREAD_LIBRARY)/ttrace.tcl
+	} elseif {\[file readable \[file join [list $dir] .. lib ttrace.tcl\]\]} {
+	    source \[file join [list $dir] .. lib ttrace.tcl\]
+	} elseif {\[file readable \[file join [list $dir] ttrace.tcl\]\]} {
+	    source \[file join [list $dir] ttrace.tcl\]
+	}
     }]
 }
-
